force-app/main/default/objects/Org_Settings__c/Org_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global settings used to control the active state of custom logic defined within the org.</description>
    <label>Org Settings</label>
</CustomObject>