force-app/main/default/objects/Org_Settings__c/fields/Auto_email_from_address__c.field-meta.xml
<CustomField>
    <fullName>Auto_email_from_address__c</fullName>
    <label>Auto email from address</label>
    <type>Email</type>
</CustomField>