force-app/main/default/objects/Org_Settings__c/fields/Auto_email_from_name__c.field-meta.xml
<CustomField>
    <fullName>Auto_email_from_name__c</fullName>
    <label>Auto email from name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>