force-app/main/default/objects/Org_Settings__c/fields/Case_Status_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_In_Progress__c</fullName>
    <defaultValue>&quot;In Progress&quot;</defaultValue>
    <label>Case Status In Progress</label>
    <length>11</length>
    <type>Text</type>
</CustomField>