force-app/main/default/objects/Org_Settings__c/fields/Enquiry_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Entitlement_ID__c</fullName>
    <description>Entitlement Id for enquiry cases</description>
    <label>Enquiry Entitlement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>