force-app/main/default/objects/Org_Settings__c/fields/Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_ID__c</fullName>
    <description>SF Row ID of the Entitlement to be associated to Procurement records and used to determine milestone processing.</description>
    <inlineHelpText>SF Row ID of the Entitlement to be associated to Procurement records and used to determine milestone processing.</inlineHelpText>
    <label>Procurement Entitlement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>