force-app/main/default/objects/Org_Settings__c/fields/Internal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Id__c</fullName>
    <description>Id of the Account Record that &apos;represents&apos; the CCS organisation. This has been created because CCS uses the URN values of accounts for integration purposes and needs to include itself as a record to integrate. Storing this will allow for the lookup of the internal account to get the URN (amongst other values)</description>
    <inlineHelpText>Id of the Account Record that &apos;represents&apos; the CCS organisation. Typically, this should be the Id of the &apos;Crown Commercial Service&apos; account.</inlineHelpText>
    <label>Internal Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>