force-app/main/default/objects/Org_Settings__c/fields/ORG_URL__c.field-meta.xml
<CustomField>
    <fullName>ORG_URL__c</fullName>
    <description>Holds the URL of the Salesforce instande.  eg in development, this is https://crowncommercial--dev.cs87.my.salesforce.com</description>
    <label>ORG URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>