force-app/main/default/objects/Org_Settings__c/fields/PEM_SSO_Only__c.field-meta.xml
<CustomField>
    <fullName>PEM_SSO_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSO only, limited access to SSO only</description>
    <inlineHelpText>SSO only, limited access to SSO only</inlineHelpText>
    <label>PEM SSO Only</label>
    <type>Checkbox</type>
</CustomField>