force-app/main/default/objects/Org_Settings__c/fields/Policy_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Entitlement_ID__c</fullName>
    <label>Policy Entitlement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>