force-app/main/default/objects/Org_Settings__c/fields/Portal_Guest_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Guest_User_Id__c</fullName>
    <description>This is the Portal Guest User Id, for use in workflow, validation and apex code.</description>
    <inlineHelpText>This is the Portal Guest User Id, for use in workflow, validation and apex code.</inlineHelpText>
    <label>Portal Guest User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>