force-app/main/default/objects/Org_Settings__c/fields/Requester_Alert_Days__c.field-meta.xml
<CustomField>
    <fullName>Requester_Alert_Days__c</fullName>
    <label>Requester Alert Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>