force-app/main/default/objects/Org_Settings__c/fields/Technology_Support_Quick_Fix_Case__c.field-meta.xml
<CustomField>
    <fullName>Technology_Support_Quick_Fix_Case__c</fullName>
    <description>This is the queue that will be used for the new portal user reg cases.</description>
    <label>Technology Support - Quick Fix Case</label>
    <length>15</length>
    <type>Text</type>
</CustomField>