force-app/main/default/objects/Org_Settings__c/fields/Temp_Portal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Portal_Account_Id__c</fullName>
    <description>Temporary Portal Account Id. This is used as the default account to assign newly registered portal contacts if the correct account cannot be identified or selected by the user registering.</description>
    <inlineHelpText>Temporary Portal Account Id. This is used as the default account to assign newly registered portal contacts if the correct account cannot be identified or selected by the user registering.</inlineHelpText>
    <label>Temp Portal Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>