force-app/main/default/objects/Org_Settings__c/fields/Triggers_Active__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting value=true; triggers are active, Setting value=false; triggers are inactive.</description>
    <inlineHelpText>Setting value=true; triggers are active, Setting value=false; triggers are inactive.</inlineHelpText>
    <label>Triggers Active?</label>
    <type>Checkbox</type>
</CustomField>